src/views/CardsView.scss
@use "../scss/spacing";

.CardsView {
  height: 100%;
  width: 100%;
  overflow: auto;
  padding: spacing.$md;
}

@mixin CardsView-CardsRow {
  display: flex;
  flex-direction: column;
  /**
  TODO: specify height in ems, adjust SVG accordingly?
  gap: 1em;
  **/
  gap: 12px;
}

.CardsView-Cards {
  min-height: 100%;
  min-width: 100%;
  @include CardsView-CardsRow;
}

.CardsView-TreeView {
  display: flex;
  flex-direction: row;

  & > * {
    flex: 0 0 auto;
  }
}

.CardsView-TreeView-Children {
  @include CardsView-CardsRow;
}

.CardsView-Card {
  flex: 0 0 auto;
  background-color: #fff;
  border: 1px solid #666;
  border-radius: 0.5em;
  padding: 0.5em 1em;
  /**
  TODO: specify height in ems, adjust SVG accordingly?
  height: 5em;
  **/
  height: 85px;
  width: 15em;
  display: flex;
  flex-direction: column;

  &--selected {
    border-color: #3182ce;
    box-shadow: 0 0 3px 3px #3182ce;
  }
}

.CardsView-Card-Text {
  flex: 1 1 auto;
}

.CardsView-Card-Details {
  flex: 0 0 auto;
  font-size: 14px;
  color: #666;
}

